# LestaTest

./: .gitignore  CMakeLists.txt  Readme.md  buildProject.sh  main.cpp  test.cpp  test.h
src/another/header/: functionHelper.h  structHelper.h  variablesForTest.h
src/another/source/: functionHelper.cpp
src/classes/header/: Emitter.h  GlobalTime.h  Particle.h  Physics.h  PoolEmitters.h  Render.h
src/classes/source/: Emitter.cpp  GlobalTime.cpp  Particle.cpp  Physics.cpp  PoolEmitters.cpp  Render.cpp
